back to top button and contact us page

--- a/index.html
+++ b/index.html
@@ -147,22 +147,58 @@
 
   <div class="section">
     <div class="container">
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-      <p>Hello world! This is HTML5 Boilerplate.</p>
-    </div>
+      <h2 class="text-center">Contact Us</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="form_name">Firstname *</label>
+              <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+              <div class="help-block with-errors"></div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="form_lastname">Lastname *</label>
+              <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+              <div class="help-block with-errors"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="form_email">Email *</label>
+              <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+              <div class="help-block with-errors"></div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="form_need">Please specify your need *</label>
+              <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
+                <option value=""></option>
+                <option value="Request quotation">Request quotation</option>
+                <option value="Request order status">Request order status</option>
+                <option value="Request copy of an invoice">Request copy of an invoice</option>
+                <option value="Other">Other</option>
+              </select>
+              <div class="help-block with-errors"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="form_message">Message *</label>
+              <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+              <div class="help-block with-errors"></div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <input type="submit" class="btn btn-success btn-send disabled" value="Send message">
+          </div>
+        </div>
+      </div>
   </div>
 
   <footer>
@@ -178,7 +214,7 @@
     <div class="sm-item"><a href="https://www.instagram.com/?hl=en" alt="Instagram"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
   </div>
 
-  <a id="backtotop" class="anchor-link" href="#top" data-location="top">TOP</a>
+  <a id="backtotop" class="anchor-link" href="#top" data-location="top"><i class="fa fa-arrow-up"></i></a>
 
   <style>
     .social-media-wrapper{ width:100%; position:fixed; bottom:0; left:0; z-index:9999; }
