fixing 3 column data

--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
   </div>
 
   <div class="section">
-    <div class="container equal-height">
-      <div class="col col-sm-4">
-        <div style="background:orange">
+    <div class="container"><!-- equal-height -->
+      <div class="col-xs-12 col-sm-4">
+        <div style="background:orange; padding:30px 20px;">
           <h2>Natural and Organic</h2>
           <p>All of our products are 100% organic</p>
         </div>
       </div>
 
-      <div class="col col-sm-4">
-        <div style="background:red">
+      <div class="col-xs-12 col-sm-4">
+        <div style="background:red; padding:30px 20px;">
           <h2>Natural and Organic</h2>
           <p>All of our products are 100% organic</p>
         </div>
       </div>
 
-      <div class="col col-sm-4">
-        <div style="background:blue">
+      <div class="col-xs-12 col-sm-4">
+        <div style="background:blue; padding:30px 20px;">
           <h2>Natural and Organic</h2>
           <p>All of our products are 100% organic</p>
         </div>
