--- a/index.html
+++ b/index.html
@@ -32,8 +32,22 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <header>
+  <header id="topnavheader">
+    <nav class="navbar navbar-expand-sm">
+      <a class="navbar-brand anchor-link" data-location="top" href="#">The Cake Deli</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"><a class="nav-link anchor-link" data-location="top" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link anchor-link" data-location="aboutus" href="#aboutus">About Us</a></li>
+          <li class="nav-item"><a class="nav-link anchor-link" data-location="ourproducts" href="#ourproducts">Our Products</a></li>
+          <li class="nav-item"><a class="nav-link anchor-link" data-location="contactus" href="#contactus">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
   <!-- Start Hero Section-->
@@ -70,6 +84,7 @@
     </div>
   </div>
 
+  <a name="ourproducts"></a>
   <div class="section">
     <div class="container"><!-- equal-height -->
       <div class="col-xs-12 col-sm-4">
@@ -145,6 +160,7 @@
     </div>
   </div>
 
+  <a name="contactus"></a>
   <div class="section">
     <div class="container">
       <h2 class="text-center">Contact Us</h2>
