--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="hero-slider d-lg-flex align-items-lg-right py-lg-0 screen-spacer jarallax" style="background-image: url(img/top-hero-3.jpg);">
     <div class="bg-gradient-overlay"></div>
     <div class="container-fluid">
-      <div class="row" style="min-height:100vh;align-items:center;">
+      <div class="row" style="min-height:100vh; align-items:center; padding:2rem 0;">
         <div class="col-md-10 offset-md-1 text-center">
           <img src="img/logo.png" style="width:40%; max-width:200px;" />
           <h1 class="display-3 text-white font-weight-bold">Ali's Amazing Cakes</h1>
