fix main nav menu

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
   </section>
 
   <footer class="sh-footer" role="contentinfo" itemscope="itemscope" itemtype="http://schema.org/WPFooter">
-    <div class="flex-column-container">
-      <div class="flex-content-column">
+    <div class="flex-column-container mobile-row">
+      <div class="flex-content-column hide-small">
         <img src="img/logo.png" class="copyrights-image" alt="The Cake Deli" />
       </div>
       <div class="flex-content-column center flex-v-align">
