--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h1>Restaurant<br />& Dishes</h1>
   </section>
 
-  <section id="whatCanWeOffer" class="full-height flex-v-align" style="background-color:#f9f9f9;">
+  <section id="whatCanWeOffer" class="full-height flex-v-align" style="background-image: linear-gradient(white, #f9f9f9);">
     <a class="scroll-to" name="aboutus"></a>
     <div class="container center">
       <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown">
