adding letters to 5050 sections

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
   -->
   <section id="homeHero" class="full-height flex-v-align jarallax">
     <a class="scroll-to" name="top"></a>
-    <h1>Restaurant<br />& Dishes</h1>
+    <h1 class="animate-in-viewport" data-animate="animate__animated animate__slideInLeft">Restaurant</h1>
+    <h1 class="animate-in-viewport" data-animate="animate__animated animate__slideInRight">& Dishes</h1>
   </section>
-
   <section id="whatCanWeOffer" class="full-height flex-v-align" style="background-image: linear-gradient(white, #f9f9f9);">
     <a class="scroll-to" name="aboutus"></a>
     <div class="container center">
@@ -126,6 +126,7 @@
     <div id="aboutWelcome" class="flex-column-container">
       <div id="pastry-img" class="flex-content-column background-img left animate-in-viewport" data-animate="animate__animated animate__slideInLeft"></div>
       <div class="flex-content-column flex-content-middle animate-in-viewport" data-animate="animate__animated animate__fadeIn" style="padding: 0 2rem 0 6rem">
+        <span class="background-letter">W</span>
         <h3 class="mbot-large"><em>Welcome to Jevelin<br />Restaurant</em></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis tortor eget sodales ultrices. Pellentesque bibendum condimentum neque, nec iaculis augue ultrices ac. Fusce interdum viverra aliquet.</p>
       </div>
@@ -136,10 +137,18 @@
     <a class="scroll-to" name="chef"></a>
     <div id="aboutChef" class="flex-column-container">
       <div class="flex-content-column flex-content-middle animate-in-viewport" data-animate="animate__animated animate__fadeIn" style="padding: 0 6rem 0 2rem">
+        <span class="background-letter">&</span>
         <h3 class="mbot-large"><em>Chef & Owner Kate Fuson<br />and Her Husband Jack</em></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis tortor eget sodales ultrices. Pellentesque bibendum condimentum neque, nec iaculis augue ultrices ac. Fusce interdum viverra aliquet.</p>
       </div>
       <div id="pastry-img2" class="flex-content-column background-img right animate-in-viewport" data-animate="animate__animated animate__slideInRight"></div>
+    </div>
+  </section>
+
+  <section class="full-height flex-v-align">
+    <a class="scroll-to" name="flavours"></a>
+    <div id="ourFlavours" class="flex-column-container">
+      <h3 class="center"><em>Our Flavours</em></h3>
     </div>
   </section>
 
