flavours link added

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         <span class="background-letter">W</span>
         <h3 class="mbot-large"><em>Welcome to Jevelin<br />Restaurant</em></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis tortor eget sodales ultrices. Pellentesque bibendum condimentum neque, nec iaculis augue ultrices ac. Fusce interdum viverra aliquet.</p>
+        <p>CHeck out our <a class="nav-link anchor-link" data-location="flavours" href="#flavours">flavours</a></p>
       </div>
     </div>
   </section>
