adding images to the flavours section

--- a/index.html
+++ b/index.html
@@ -146,10 +146,15 @@
     </div>
   </section>
 
-  <section class="full-height flex-v-align">
+  <section class="full-height flex-t-align">
     <a class="scroll-to" name="flavours"></a>
     <div id="ourFlavours" class="flex-column-container">
-      <h3 class="center"><em>Our Flavours</em></h3>
+      <div style="border-radius: 10px 10px 10px 10px;
+        box-shadow: 0px 7px 25px 1px rgba(0,0,0,0.08);
+        background-color: #ffffff;
+      ">
+        <h3 style="margin: 0 auto;"><em>Our Flavours</em></h3>
+      </div>
     </div>
   </section>
 
