--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <link rel="stylesheet" href="css/main.css?v=1.01">
-  <link rel="stylesheet" href="css/nav-menu.css?v=1.01">
-  <link rel="stylesheet" href="css/custom.css?v=1.01">
-  <link rel="stylesheet" media="(max-width: 650px)" href="css/custom-mobile.css?v=1.01" />
-  <link rel="stylesheet" media="(min-width: 651px) and (max-width: 900px)" href="css/custom-tablet.css?v=1.01" />
-  <link rel="stylesheet" media="(min-width: 901px)" href="css/custom-desktop.css?v=1.01" />
-  <link rel="stylesheet" media="(min-width: 1100px)" href="css/custom-full.css?v=1.01" />
+  <link rel="stylesheet" href="css/main.css?v=1.02">
+  <link rel="stylesheet" href="css/nav-menu.css?v=1.02">
+  <link rel="stylesheet" href="css/custom.css?v=1.02">
+  <link rel="stylesheet" media="(max-width: 650px)" href="css/custom-mobile.css?v=1.02" />
+  <link rel="stylesheet" media="(min-width: 651px) and (max-width: 900px)" href="css/custom-tablet.css?v=1.02" />
+  <link rel="stylesheet" media="(min-width: 901px)" href="css/custom-desktop.css?v=1.02" />
+  <link rel="stylesheet" media="(min-width: 1100px)" href="css/custom-full.css?v=1.02" />
 </head>
 
 <body>
@@ -129,7 +129,7 @@
         <span class="background-letter">W</span>
         <h3 class="mbot-large"><em>Welcome to Jevelin<br />Restaurant</em></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis tortor eget sodales ultrices. Pellentesque bibendum condimentum neque, nec iaculis augue ultrices ac. Fusce interdum viverra aliquet.</p>
-        <p>CHeck out our <a class="nav-link anchor-link" data-location="flavours" href="#flavours">flavours</a></p>
+        <p>Check out our <a class="nav-link anchor-link" data-location="flavours" href="#flavours">flavours</a></p>
       </div>
     </div>
   </section>
@@ -148,12 +148,52 @@
 
   <section class="full-height flex-t-align">
     <a class="scroll-to" name="flavours"></a>
-    <div id="ourFlavours" class="flex-column-container">
-      <div style="border-radius: 10px 10px 10px 10px;
-        box-shadow: 0px 7px 25px 1px rgba(0,0,0,0.08);
-        background-color: #ffffff;
-      ">
-        <h3 style="margin: 0 auto;"><em>Our Flavours</em></h3>
+    <div id="ourFlavours" class="flex-column-container center">
+      <div>
+        <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown">
+          <h2 class="mtop-large">Our Flavours</h2>
+          <div class="title-divider">
+            <span class="sh-divider-title">from the best ingredients</span>
+          </div>
+        </div>
+        <div class='flex-column-container wrap mtop-large'>
+          <div class='flex-content-column align-left'>
+            <h4 class="accent-color">Cake</h4>
+            <div class="ind-flavour">
+              <h5>Chocolate</h5>
+              <div class="sh-divider-line"></div>
+              <p>Everybodys favourite, blah blah blah</p>
+            </div>
+            <div class="ind-flavour">
+              <h5>Plain</h5>
+              <div class="sh-divider-line"></div>
+              <p>Everybodys favourite, blah blah blah</p>
+            </div>
+            <div class="ind-flavour">
+              <h5>Red Velvet</h5>
+              <div class="sh-divider-line"></div>
+              <p>Everybodys favourite, blah blah blah</p>
+            </div>
+          </div>
+          <div class='flex-content-column align-left'>
+            <h4 class="accent-color">Fillings</h4>
+            <div class="ind-flavour">
+              <h5>Chocolate</h5>
+              <div class="sh-divider-line"></div>
+              <p>Everybodys favourite, blah blah blah</p>
+            </div>
+            <div class="ind-flavour">
+              <h5>Butterscotch</h5>
+              <div class="sh-divider-line"></div>
+              <p>Everybodys favourite, blah blah blah</p>
+            </div>
+            <div class="ind-flavour">
+              <h5>Strawberry</h5>
+              <div class="sh-divider-line"></div>
+              <p>Everybodys favourite, blah blah blah</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -164,9 +204,9 @@
       <div class="flex-content-column flex-v-align center">
         <h3 class="mbot-large"><em>How to Find<br />& Contact Us</em></h3>
         <p><strong>Find us:</strong><br />Unit 3 Stone Pale, Whitefield, Manchester, M45 6JG</p>
-        <div class="sh-divider-line"></div>
+        <div class="sh-divider-line small"></div>
         <p><strong>Email us:</strong><br /><a href="mailto:info@thecakedeli.com">info@thecakedeli.com</a></p>
-        <div class="sh-divider-line"></div>
+        <div class="sh-divider-line small"></div>
         <p><strong>Phone us:</strong><br /><a href="tel:07123456789">07123456789</a></p>
       </div>
       <div class="flex-content-column">
