enquiry form page template added

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <section class="full-height flex-t-align">
     <a class="scroll-to" name="flavours"></a>
     <div id="ourFlavours" class="flex-column-container center">
-      <div>
+      <div class="card-content">
         <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown">
           <h2 class="mtop-large">Our Flavours</h2>
           <div class="title-divider">
@@ -175,6 +175,24 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="full-height flex-t-align">
+    <a class="scroll-to" name="enquire"></a>
+    <div id="enquire" class="flex-column-container center">
+      <div class="card-content">
+
+        <div class="flex-content-column flex-v-align center">
+          <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown">
+            <h2 class="mtop-large">Enquire about a cake</h2>
+            <div class="title-divider">
+              <span class="sh-divider-title">ask us anything, no job is too large</span>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </section>
