Added Enquiries to the header

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <li><a class="nav-link anchor-link" data-location="aboutus" href="#aboutus">About Us</a></li>
         <li><a class="nav-link anchor-link" data-location="ourproducts" href="#ourproducts">Our Products</a></li>
         <li><a class="nav-link anchor-link" data-location="chef" href="#chef">Who are we</a></li>
+        <li><a class="nav-link anchor-link" data-location="enquire" href="#enquire">Enquiries</a></li>
         <li><a class="nav-link anchor-link" data-location="contactus" href="#contactus">Contact Us</a></li>
       </ul>
       <div class="nav-social">
@@ -192,7 +193,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </section>
