--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
   <link rel="stylesheet" href="css/main.css?v=1.03">
   <link rel="stylesheet" href="css/nav-menu.css?v=1.02">
   <link rel="stylesheet" href="css/custom.css?v=1.02">
-  <link rel="stylesheet" media="(max-width: 650px)" href="css/custom-mobile.css?v=1.02" />
-  <link rel="stylesheet" media="(min-width: 651px) and (max-width: 900px)" href="css/custom-tablet.css?v=1.02" />
-  <link rel="stylesheet" media="(min-width: 901px)" href="css/custom-desktop.css?v=1.02" />
+  <link rel="stylesheet" media="(max-width: 750px)" href="css/custom-mobile.css?v=1.02" />
+  <link rel="stylesheet" media="(min-width: 751px) and (max-width: 1000px)" href="css/custom-tablet.css?v=1.02" />
+  <link rel="stylesheet" media="(min-width: 1001px)" href="css/custom-desktop.css?v=1.02" />
   <link rel="stylesheet" media="(min-width: 1100px)" href="css/custom-full.css?v=1.02" />
 </head>
 
 <body>
   <header id="topnavheader">
-    <img src="img/logo.png" class="header-logo" alt="The Cake Deli" />
+    <div class="web-logo">
+      <img src="img/logo.png" class="header-logo" alt="The Cake Deli" />
+    </div>
 
     <a href="#main-menu"
        id="main-menu-toggle"
@@ -46,6 +48,9 @@
     </a>
     
     <nav id="main-menu" class="main-menu" aria-label="Main menu">
+      <div class="menu-logo">
+        <img src="img/logo.png" class="header-logo" alt="The Cake Deli" />
+      </div>
       <a href="#main-menu-toggle"
          id="main-menu-close"
          class="menu-close"
@@ -70,6 +75,7 @@
   </header>
   <section id="homeHero" class="full-height flex-v-align jarallax">
     <a class="scroll-to" name="top"></a>
+    <img src="img/logo.png" class="logo" alt="The Cake Deli" />
     <h1 class="animate-in-viewport" data-animate="animate__animated animate__slideInLeft">Restaurant</h1>
     <h1 class="animate-in-viewport" data-animate="animate__animated animate__slideInRight">& Dishes</h1>
   </section>
@@ -83,7 +89,7 @@
         </div>
       </div>
 
-      <div class="flex-column-container mtop-large">
+      <div class="flex-column-container">
         <div class="flex-content-column center animate-in-viewport" data-animate="animate__animated animate__slideInLeft">
           <div id="what-offer-img-1" class="circular-img"></div>
           <h3><em><strong>Wedding</strong> Cakes</em></h3>
