back to top button

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown">
             <h2 class="mtop-large">Enquire about a cake</h2>
             <div class="title-divider">
-              <span class="sh-divider-title">ask us anything, no job is too large</span>
+              <span class="sh-divider-title">no job is too big</span>
             </div>
           </div>
         </div>
@@ -238,6 +238,10 @@
       </div>
     </div>
   </footer>
+
+  <div id="backtotop" class="sh-back-to-top active">
+    <a class="anchor-link" data-location="top" href="#"><i class="fa fa-chevron-up"></i></a>
+  </div>
 
   <script src="js/vendor/jarallax.js"></script>
   <script src="js/main.js"></script>
