--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <link rel="stylesheet" href="css/main.css?v=1.04">
-  <link rel="stylesheet" href="css/nav-menu.css?v=1.04">
-  <link rel="stylesheet" href="css/custom.css?v=1.04">
-  <link rel="stylesheet" media="(max-width: 750px)" href="css/custom-mobile.css?v=1.04" />
-  <link rel="stylesheet" media="(min-width: 751px) and (max-width: 1000px)" href="css/custom-tablet.css?v=1.04" />
-  <link rel="stylesheet" media="(min-width: 1001px)" href="css/custom-desktop.css?v=1.04" />
-  <link rel="stylesheet" media="(min-width: 1100px)" href="css/custom-full.css?v=1.04" />
+  <link rel="stylesheet" href="css/main.css?v=1.05">
+  <link rel="stylesheet" href="css/nav-menu.css?v=1.05">
+  <link rel="stylesheet" href="css/custom.css?v=1.05">
+  <link rel="stylesheet" media="(max-width: 750px)" href="css/custom-mobile.css?v=1.05" />
+  <link rel="stylesheet" media="(min-width: 751px) and (max-width: 1000px)" href="css/custom-tablet.css?v=1.05" />
+  <link rel="stylesheet" media="(min-width: 1001px)" href="css/custom-desktop.css?v=1.05" />
+  <link rel="stylesheet" media="(min-width: 1100px)" href="css/custom-full.css?v=1.05" />
 </head>
 
 <body>
@@ -90,17 +90,17 @@
       </div>
 
       <div class="flex-column-container">
-        <div class="flex-content-column center animate-in-viewport" data-animate="animate__animated animate__slideInLeft">
+        <div class="flex-content-column mtop-5 center animate-in-viewport" data-animate="animate__animated animate__slideInLeft">
           <div id="what-offer-img-1" class="circular-img"></div>
           <h3><em><strong>Wedding</strong> Cakes</em></h3>
           <p>Nulla dapibus tempus malesuada. Duis ultrices lacinia eleifend. Etiam vel luctus nibh. Donec eu volutpat.</p>
         </div>
-        <div class="flex-content-column center animate-in-viewport" data-animate="animate__animated animate__slideInUp">
+        <div class="flex-content-column mtop-5 center animate-in-viewport" data-animate="animate__animated animate__slideInUp">
           <div id="what-offer-img-2" class="circular-img"></div>
           <h3><em><strong>Birthday</strong> Cakes</em></h3>
           <p>Nulla dapibus tempus malesuada. Duis ultrices lacinia eleifend. Etiam vel luctus nibh. Donec eu volutpat.</p>
         </div>
-        <div class="flex-content-column center animate-in-viewport" data-animate="animate__animated animate__slideInRight">
+        <div class="flex-content-column mtop-5 center animate-in-viewport" data-animate="animate__animated animate__slideInRight">
           <div id="what-offer-img-3" class="circular-img"></div>
           <h3><em><strong>Celebration</strong> Cakes</em></h3>
           <p>Nulla dapibus tempus malesuada. Duis ultrices lacinia eleifend. Etiam vel luctus nibh. Donec eu volutpat.</p>
@@ -109,12 +109,12 @@
     </div>
   </section>
 
-  <section class="full-height flex-v-align">
+  <section class="inner-content flex-v-align">
     <a class="scroll-to" name="ourproducts"></a>
     <div id="aboutWelcome" class="flex-column-container">
       <div id="pastry-img" class="flex-content-column background-img left animate-in-viewport" data-animate="animate__animated animate__slideInLeft"></div>
-      <div class="flex-content-column flex-content-middle animate-in-viewport" data-animate="animate__animated animate__fadeIn" style="padding: 0 2rem 0 6rem">
-        <span class="background-letter">W</span>
+      <div class="flex-content-column flex-content-middle animate-in-viewport" data-animate="animate__animated animate__fadeIn">
+        <span class="background-letter">w</span>
         <h3 class="mbot-large"><em>Welcome to Jevelin<br />Restaurant</em></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis tortor eget sodales ultrices. Pellentesque bibendum condimentum neque, nec iaculis augue ultrices ac. Fusce interdum viverra aliquet.</p>
         <p>Check out our <a class="nav-link anchor-link" data-location="flavours" href="#flavours">flavours</a></p>
@@ -122,10 +122,10 @@
     </div>
   </section>
 
-  <section class="full-height flex-v-align">
+  <section class="inner-content flex-v-align">
     <a class="scroll-to" name="chef"></a>
     <div id="aboutChef" class="flex-column-container">
-      <div class="flex-content-column flex-content-middle animate-in-viewport" data-animate="animate__animated animate__fadeIn" style="padding: 0 6rem 0 2rem">
+      <div class="flex-content-column flex-content-middle animate-in-viewport" data-animate="animate__animated animate__fadeIn">
         <span class="background-letter">&</span>
         <h3 class="mbot-large"><em>Chef & Owner Kate Fuson<br />and Her Husband Jack</em></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis tortor eget sodales ultrices. Pellentesque bibendum condimentum neque, nec iaculis augue ultrices ac. Fusce interdum viverra aliquet.</p>
