--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 <!--
   <script src="js/vendor/bootstrap.js"></script>
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -23,7 +27,6 @@
   <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
 -->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link rel="stylesheet" href="css/main.css?v=1.05">
   <link rel="stylesheet" href="css/nav-menu.css?v=1.05">
   <link rel="stylesheet" href="css/custom.css?v=1.05">
@@ -31,6 +34,7 @@
   <link rel="stylesheet" media="(min-width: 751px) and (max-width: 1000px)" href="css/custom-tablet.css?v=1.05" />
   <link rel="stylesheet" media="(min-width: 1001px)" href="css/custom-desktop.css?v=1.05" />
   <link rel="stylesheet" media="(min-width: 1100px)" href="css/custom-full.css?v=1.05" />
+  <link rel="stylesheet" href="css/form.css" />
 </head>
 
 <body>
@@ -192,10 +196,50 @@
       <div class="card-content">
 
         <div class="flex-content-column flex-v-align center">
-          <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown">
+          <div class="animate-in-viewport" data-animate="animate__animated animate__slideInDown" style="width: 100%;">
             <h2 class="mtop-large">Enquire about a cake</h2>
             <div class="title-divider">
               <span class="sh-divider-title">no job is too big</span>
+            </div>
+
+            <div id="formWrapper">
+              <form class="form-signin">
+                <div class="form-row">
+                  <div class="form-label-group col-12 col-sm-6">
+                    <input type="text" id="inputName" class="form-control" placeholder="Full name" required autofocus>
+                    <label for="inputName">Full name</label>
+                  </div>
+                  <div class="form-label-group col-12 col-sm-6">
+                    <input type="number" id="inputPhone" class="form-control" placeholder="Phone Number" required>
+                    <label for="inputPhone">Phone number</label>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-label-group col-12">
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+                    <label for="inputEmail">Email address</label>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="col-12">
+                    <select class="custom-select custom-select-lg mb-3">
+                      <option selected>What is your enquiry regarding</option>
+                      <option value="weddings">Weddings</option>
+                      <option value="birthdays">Birthdays</option>
+                      <option value="large_orders">Large Order</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-label-group col-12">
+                    <textarea id="inputMessage" class="form-control" placeholder="Message" required></textarea>
+                    <label for="inputMessage">Message</label>
+                  </div>
+                  <div class="col-12">
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Send Enquiry</button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
